--- a/app/.env.server.example
+++ b/app/.env.server.example
@@ -38,3 +38,9 @@ GOOGLE_ANALYTICS_CLIENT_EMAIL=email@example.gserviceaccount.com
 GOOGLE_ANALYTICS_PRIVATE_KEY=LS02...
 # You will find your Property ID in the Google Analytics dashboard. It will look like '987654321'
 GOOGLE_ANALYTICS_PROPERTY_ID=123456789
+
+# (OPTIONAL) get your aws s3 credentials at https://console.aws.amazon.com and create a new IAM user with S3 access
+AWS_S3_IAM_ACCESS_KEY=ACK...
+AWS_S3_IAM_SECRET_KEY=t+33a...
+AWS_S3_FILES_BUCKET=your-bucket-name
+AWS_S3_REGION=your-region
