--- a/blog/package.json
+++ b/blog/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/starlight": "^0.13.0",
+    "@astrojs/starlight-tailwind": "^2.0.1",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^3.2.3",
     "sharp": "^0.32.5",
     "starlight-blog": "^0.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.2"
   }
 }
