upgrad aws sdk to v3

--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,14 @@
 {
   "name": "opensaas",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.523.0",
+    "@aws-sdk/s3-request-presigner": "^3.523.0",
     "@faker-js/faker": "8.3.1",
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "apexcharts": "^3.41.0",
-    "aws-sdk": "^2.1551.0",
     "headlessui": "^0.0.0",
     "node-fetch": "3.3.0",
     "openai": "^4.24.1",
