--- a/app/package.json
+++ b/app/package.json
@@ -23,11 +23,14 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.0",
     "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
     "@types/react": "^18.0.37",
     "@types/react-router-dom": "^5.3.3",
     "prisma": "4.16.2",
     "typescript": "^5.1.0",
     "vite": "^4.3.9"
-  }
+  },
+  "scripts": {}
 }
