--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "apexcharts": "^3.41.0",
     "headlessui": "^0.0.0",
+    "linebyline": "^1.3.0",
     "node-fetch": "3.3.0",
     "openai": "^4.24.1",
     "prettier": "3.1.1",
