--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
     "stripe": "11.15.0",
+    "wait-port": "^1.1.0",
     "wasp": "file:.wasp/out/sdk/wasp",
     "zod": "3.22.4"
   },
