--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,9 @@
   "scripts": {
     "example-app:start": "node ci-start-app.js",
     "example-app:start-db": "npm run example-app:cleanup-db && wasp start db",
-    "example-app:start-app": "npm run example-app:wait-for-db && npm run example-app:prepare-env && cd ./app && wasp db migrate-dev && wasp start",
+    "example-app:start-app": "npm run example-app:wait-for-db && npm run example-app:prepare-env && wasp db migrate-dev && wasp start",
     "example-app:wait-for-db": "sleep 5 && ./node_modules/.bin/wait-port 5432",
-    "example-app:prepare-env": "cp ./app/.env.server.example ./app/.env.server",
+    "example-app:prepare-env": "cp .env.server.example .env.server",
     "example-app:cleanup-db": "(docker container rm $(docker container ls -f name=^wasp-dev-db-OpenSaaS- -q) -f || true) && docker volume rm $(docker volume ls -f name=^wasp-dev-db-OpenSaaS- -q) -f || true"
   },
   "dependencies": {
