--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
     "stripe": "11.15.0",
+    "tailwind-merge": "^2.2.1",
     "wasp": "file:.wasp/out/sdk/wasp",
     "zod": "3.22.4"
   },
