--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -56,4 +56,4 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           cd app
-          DEBUG=pw:webserver npx playwright test
+          DEBUG=pw:webserver npx playwright test e2e-tests
