--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -41,14 +41,9 @@ jobs:
           cd app
           cp .env.server.example .env.server
 
-      - name: Install Playwright tests
-        run: |
-          cd app
-          npm install @playwright/test
-
       - name: Set up Playwright
         run: |
-          cd app
+          cd ../e2e-tests
           npx playwright install --with-deps
 
       - name: Run Playwright tests
@@ -56,4 +51,4 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           cd app
-          DEBUG=pw:webserver npx playwright test e2e-tests
+          DEBUG=pw:webserver npx playwright test
