--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,6 @@
 {
   "name": "opensaas",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/s3-request-presigner": "^3.523.0",
@@ -29,7 +27,6 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.37",
