--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Set up Playwright
         run: |
-          cd ../e2e-tests
+          cd e2e-tests
           npx playwright install --with-deps
 
       - name: Run Playwright tests
