--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -15,9 +15,10 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    node-version:
-      - 'latest'
-      
+    strategy:
+      node-version:
+        - 'latest'
+
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
