--- a/.github/workflows/retag-commit.yml
+++ b/.github/workflows/retag-commit.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   retag:
     runs-on: ubuntu-latest
+    env:
+      TAG_NAME: wasp-v0.12-template
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -19,10 +21,10 @@ jobs:
 
       - name: Delete Old Tag
         run: |
-          git tag -d wasp-v0.12-template || true 
-          git push origin :refs/tags/wasp-v0.12-template || true
+          git tag -d ${{ env.TAG_NAME }} || true 
+          git push origin :refs/tags/${{ env.TAG_NAME }} || true
 
       - name: Add New Tag
         run: |
-          git tag wasp-v0.12-template
-          git push origin wasp-v0.12-template
+          git tag ${{ env.TAG_NAME }}
+          git push origin ${{ env.TAG_NAME }}
