--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - playwright-tests # TODO remove this before merging
   pull_request:
     branches:
       - main
@@ -27,7 +26,7 @@ jobs:
           node-version: '20'
 
       - name: Install Wasp
-        run: curl -sSL https://get.wasp-lang.dev/installer.sh | sh -s -- -v 0.12.4
+        run: curl -sSL https://get.wasp-lang.dev/installer.sh | sh -s -- -v 0.13.0
 
       - name: Docker setup
         uses: docker/setup-buildx-action@v3
@@ -59,4 +58,4 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           cd e2e-tests
-          DEBUG=pw:webserver npx playwright test
+          npm run e2e:playwright:debug
