move customer portal url to .env.client

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -6,6 +6,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
+    "module": "ES2022",
     // We're bundling all code in the end so this is the most appropriate option,
     // it's also important for autocomplete to work properly.
     "moduleResolution": "bundler",
