--- a/app/.env.client.example
+++ b/app/.env.client.example
@@ -1,2 +1,5 @@
-# learn more about client side env vars https://wasp-lang.dev/docs/project/env-vars
-REACT_APP_SOME_VAR_NAME=foo
+# All client-side env vars must start with REACT_APP_ https://wasp-lang.dev/docs/project/env-vars
+
+# Find your test url at https://dashboard.stripe.com/test/settings/billing/portal
+# Remember to replace the test url with the live url before deploying to production
+REACT_APP_STRIPE_CUSTOMER_PORTAL=
