--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -33,7 +33,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       # In order for the app to run in the dev mode we need to set the required env vars even if they aren't actually used by the app.
-      # this step sets mock env vars to pass the validation steps so the app can run 
+      # This step sets mock env vars in order to pass the validation steps so the app can run 
       # in the CI environment. For vars that are actually used in tests, we set them in
       # the GitHub secrets settings and access them in a step below.
       - name: Setup Dummy Env Vars 
