--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -34,7 +34,7 @@ jobs:
 
       # In order for the app to run in the dev mode we need to set the required env vars even if they aren't actually used by the app.
       # This step sets mock env vars in order to pass the validation steps so the app can run 
-      # in the CI environment. For vars that are actually used in tests, we set them in
+      # in the CI environment. For env vars that are actually used in tests and therefore need real values, we set them in
       # the GitHub secrets settings and access them in a step below.
       - name: Setup Dummy Env Vars 
         run: |
