--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -36,7 +36,7 @@ jobs:
       # This step sets mock env vars in order to pass the validation steps so the app can run 
       # in the CI environment. For env vars that are actually used in tests and therefore need real values, we set them in
       # the GitHub secrets settings and access them in a step below.
-      - name: Setup Dummy Env Vars 
+      - name: Set required wasp app env vars to mock values
         run: |
           cd app
           cp .env.server.example .env.server
