--- a/app/.env.server.example
+++ b/app/.env.server.example
@@ -21,8 +21,8 @@ GOOGLE_CLIENT_SECRET=GOC...
 
 # get your sendgrid api key at https://app.sendgrid.com/settings/api_keys
 SENDGRID_API_KEY=test...
-# if not explicitly set to true, emails will be logged to console but not actually sent during development
-SEND_EMAILS_IN_DEVELOPMENT=false
+# Skips the email verification flow in development every time you sign up a new user.
+SKIP_EMAIL_VERIFICATION_IN_DEV=true
 
 # (OPTIONAL) get your openai api key at https://platform.openai.com/account
 OPENAI_API_KEY=sk-k...
