--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.npm
-          key: node-modules-${{ hashFiles('app/package-lock.json') }}-${{ hashFiles('e2e-tests/package-lock.json') }}-${{ runner.os }}-wasp${{ env.WASP_VERSION }}-node${{ steps.setup-node.outputs.node-version }}
+          key: node-modules-${{ runner.os }}-${{ hashFiles('app/package-lock.json') }}-${{ hashFiles('e2e-tests/package-lock.json') }}-wasp${{ env.WASP_VERSION }}-node${{ steps.setup-node.outputs.node-version }}
           restore-keys: |
             node-modules-${{ runner.os }}-
             
@@ -82,9 +82,10 @@ jobs:
           sudo apt update          
           sudo apt install stripe
 
-      # We need to run the Stripe CLI in the background to listen for webhook events from Stripe payments.
-      # These events are used to update the user's subscription status, which gives them certain permissions. 
-      # If this is not running, the payments will have no effect on a user's subscription status and tests will fail.
+      # For Stripe webhooks to work in development, we need to run the Stripe CLI to listen for webhook events. 
+      # The Stripe CLI will receive the webhook events from Stripe test payments and
+      # forward them to our local server so that we can test the payment flow in our e2e tests.
+      to work in development, we need to run the Stripe CLI to listen for webhook events.
       - name: Run Stripe CLI to listen for webhooks
         env: 
           STRIPE_DEVICE_NAME: ${{ secrets.STRIPE_DEVICE_NAME }}
@@ -104,4 +105,4 @@ jobs:
           SKIP_EMAIL_VERIFICATION_IN_DEV: true
         run: |
           cd e2e-tests
-          npm run e2e:playwright:debug
+          npm run e2e:playwright
