Updates tsconfig.json to latest version

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -5,8 +5,8 @@
 // compiler. Proper TS compiler configuration in Wasp is coming soon :)
 {
   "compilerOptions": {
+    "module": "esnext",
     "target": "esnext",
-    "module": "ES2022",
     // We're bundling all code in the end so this is the most appropriate option,
     // it's also important for autocomplete to work properly.
     "moduleResolution": "bundler",
