--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react-icons": "4.11.0",
     "stripe": "11.15.0",
     "tailwind-merge": "^2.2.1",
+    "vanilla-cookieconsent": "^3.0.1",
     "wasp": "file:.wasp/out/sdk/wasp",
     "zod": "3.22.4"
   },
