fix landing page import

--- a/template/app/.env.client.example
+++ b/template/app/.env.client.example
@@ -2,3 +2,5 @@
 
 # Find your test url at https://dashboard.stripe.com/test/settings/billing/portal
 REACT_APP_STRIPE_CUSTOMER_PORTAL=https://billing.stripe.com/...
+
+REACT_APP_GOOGLE_ANALYTICS_ID=G-...
