--- a/template/app/.env.client.example
+++ b/template/app/.env.client.example
@@ -3,4 +3,5 @@
 # Find your test url at https://dashboard.stripe.com/test/settings/billing/portal
 REACT_APP_STRIPE_CUSTOMER_PORTAL=https://billing.stripe.com/...
 
+# See https://docs.opensaas.sh/guides/analytics/#google-analytics
 REACT_APP_GOOGLE_ANALYTICS_ID=G-...
