--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -108,7 +108,7 @@ jobs:
           CREDITS_PRICE_ID: ${{ secrets.CREDITS_PRICE_ID }}
           SKIP_EMAIL_VERIFICATION_IN_DEV: true
           # Client-side env vars
-          REACT_APP_GOOGLE_ANALYTICS_ID: G-H3LSJCK95H
+          REACT_APP_GOOGLE_ANALYTICS_ID: "G-H3LSJCK95H"
         working-directory: ./template
         run: |
           cd e2e-tests
