--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -29,7 +29,7 @@ OPENAI_API_KEY=sk-k...
 PLAUSIBLE_API_KEY=gUTgtB...
 # You will find your site id in the Plausible dashboard. It will look like 'opensaas.sh'
 PLAUSIBLE_SITE_ID=yoursite.com
-PLAUSIBLE_BASE_URL=https://plausible.io/api/v1 # if you are self-hosting plausible, change this to your plausible instance's base url
+PLAUSIBLE_BASE_URL=https://plausible.io/api # if you are self-hosting plausible, change this to your plausible instance's base url
 
 # (OPTIONAL) get your google service account key at https://console.cloud.google.com/iam-admin/serviceaccounts
 GOOGLE_ANALYTICS_CLIENT_EMAIL=email@example.gserviceaccount.com
