--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -39,6 +39,7 @@ GOOGLE_ANALYTICS_PRIVATE_KEY=LS02...
 GOOGLE_ANALYTICS_PROPERTY_ID=123456789
 
 # (OPTIONAL) get your aws s3 credentials at https://console.aws.amazon.com and create a new IAM user with S3 access
+AWS_S3_ENDPOINT_URL=https://...
 AWS_S3_IAM_ACCESS_KEY=ACK...
 AWS_S3_IAM_SECRET_KEY=t+33a...
 AWS_S3_FILES_BUCKET=your-bucket-name
