--- a/template/app/package.json
+++ b/template/app/package.json
@@ -6,6 +6,7 @@
     "@faker-js/faker": "8.3.1",
     "@google-analytics/data": "4.1.0",
     "@headlessui/react": "1.7.13",
+    "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "apexcharts": "^3.41.0",
