update app diff

--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -12,6 +12,17 @@ STRIPE_CREDITS_PRICE_ID=price_...
 # after downloading starting the stripe cli (https://stripe.com/docs/stripe-cli) with `stripe listen --forward-to localhost:3001/stripe-webhook` it will output your signing secret
 STRIPE_WEBHOOK_SECRET=whsec_...
 
+# for testing, create a new store in test mode on https://lemonsqueezy.com
+LEMONSQUEEZY_API_KEY=eyJ...
+# after creating a store, you can find your store id in the store settings https://app.lemonsqueezy.com/settings/stores
+LEMONSQUEEZY_STORE_ID=012345
+# create new products and variants in the lemonsqueezy dashboard https://app.lemonsqueezy.com/products
+LEMONSQUEEZY_HOBBY_SUBSCRIPTION_VARIANT_ID=012345
+LEMONSQUEEZY_PRO_SUBSCRIPTION_VARIANT_ID=012345
+LEMONSQUEEZY_CREDITS_VARIANT_ID=012345
+# define your own webhook secret when creating a new webhook on https://app.lemonsqueezy.com/settings/webhooks
+LEMONSQUEEZY_WEBHOOK_SECRET=my-webhook-secret
+
 # set this as a comma-separated list of emails you want to give admin privileges to upon registeration
 ADMIN_EMAILS=me@example.com,you@example.com,them@example.com
 
