--- a/template/app/package.json
+++ b/template/app/package.json
@@ -17,6 +17,7 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-custom-roulette": "^1.4.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "4.11.0",
     "stripe": "11.15.0",
