add lemon squeezy as payment provider (#246)
* add lemon squeezy checkout and webhook

* add lemonSqueezy customer portal url

* Update AccountPage.tsx

* add lemon squeezy total revenue function

* update app diff

* update app diff

* add LS docs

* Update PricingPage.tsx

* add unified payment processor

* unify customer portal url

* Update paymentProcessor.ts

* update paymentProcessor logic

* update app diff to use both payments processors

* Update contentSections.ts.diff

* finishing touches

* Update e2e-tests.yml

* remove lemonsqueezy from app diff

* Update webhook.ts

--- a/template/app/.env.server.example
+++ b/template/app/.env.server.example
@@ -3,14 +3,25 @@
 # If you use `wasp start db` then you DO NOT need to add a DATABASE_URL env variable here.
 # DATABASE_URL=
 
-# for testing, go to https://dashboard.stripe.com/test/apikeys and get a test stripe key that starts with "sk_test_..."
-STRIPE_KEY=sk_test_...
-# to create a test product, go to https://dashboard.stripe.com/test/products and click on + Add Product
-STRIPE_HOBBY_SUBSCRIPTION_PRICE_ID=price_...
-STRIPE_PRO_SUBSCRIPTION_PRICE_ID=price_...
-STRIPE_CREDITS_PRICE_ID=price_...
-# after downloading starting the stripe cli (https://stripe.com/docs/stripe-cli) with `stripe listen --forward-to localhost:3001/stripe-webhook` it will output your signing secret
+# For testing, go to https://dashboard.stripe.com/test/apikeys and get a test stripe key that starts with "sk_test_..."
+STRIPE_API_KEY=sk_test_...
+# After downloading starting the stripe cli (https://stripe.com/docs/stripe-cli) with `stripe listen --forward-to localhost:3001/payments-webhook` it will output your signing secret
 STRIPE_WEBHOOK_SECRET=whsec_...
+# You can find your Stripe customer portal URL in the Stripe Dashboard under the 'Customer Portal' settings.
+STRIPE_CUSTOMER_PORTAL_URL=https://billing.stripe.com/...
+
+# For testing, create a new store in test mode on https://lemonsqueezy.com
+LEMONSQUEEZY_API_KEY=eyJ...
+# After creating a store, you can find your store id in the store settings https://app.lemonsqueezy.com/settings/stores
+LEMONSQUEEZY_STORE_ID=012345
+# define your own webhook secret when creating a new webhook on https://app.lemonsqueezy.com/settings/webhooks
+LEMONSQUEEZY_WEBHOOK_SECRET=my-webhook-secret
+
+# If using Stripe, go to https://dashboard.stripe.com/test/products and click on + Add Product
+# If using Lemon Squeezy, go to https://app.lemonsqueezy.com/products and create new products and variants
+PAYMENTS_HOBBY_SUBSCRIPTION_PLAN_ID=012345
+PAYMENTS_PRO_SUBSCRIPTION_PLAN_ID=012345
+PAYMENTS_CREDITS_10_PLAN_ID=012345
 
 # set this as a comma-separated list of emails you want to give admin privileges to upon registeration
 ADMIN_EMAILS=me@example.com,you@example.com,them@example.com
