--- a/template/app/package.json
+++ b/template/app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "opensaas",
+  "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/s3-request-presigner": "^3.523.0",
