--- a/template/app/package.json
+++ b/template/app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "opensaas",
+  "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.523.0",
     "@aws-sdk/s3-request-presigner": "^3.523.0",
@@ -29,8 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/react": "^18.0.37",
-    "@types/react-router-dom": "^5.3.3",
-    "prisma": "4.16.2",
+    "prisma": "5.19.1",
     "typescript": "^5.1.0",
     "vite": "^4.3.9"
   }
